@@ -1,3 +1,11 @@
+2008-08-18 Jens Tkotz <jens@peino.de> 1.5.9-svn-b1
+
+ * Fix: Unified appearance of all admin pages.
+
+ * Fix: Statistics and its wizard not working correct when embedded.
+
+ * Fix: Removing invalid albums did not work.
+
 2008-08-15 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b13
 
  * ImageMap fixes
